recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:3: error: too many arguments for method getY: ()Double
  getY(90);
      ^